--- a/styles/landing-page.css
+++ b/styles/landing-page.css
@@ -137,7 +137,7 @@
 }
 
 .about-us-container-profiles img {
-    height: 20vh;
+    height: 120%;
     border-radius: 200px;
     margin-bottom: 2vh;
 }
