--- a/styles/landing-page.css
+++ b/styles/landing-page.css
@@ -63,8 +63,8 @@
 }
 
 .technologies-box {
-    width: 50vw;
-    height: 20vh;
+    width: 60%;
+    height: 60%;
     background-color: #fff;
     border-radius: 20px;
 
