--- a/projects/project01_ligue-4/css/regras.css
+++ b/projects/project01_ligue-4/css/regras.css
@@ -1,27 +1,28 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Langar', cursive;
 }
 body, html{
     width: 100%;
     height: 100%;
-    font-size: 16px;
-    /* No futuro deixar background-color transparente pra virar uma janela a mais apenas*/
-    background-color: black;  
-    color: white;
+    font-size: 16px;  
 }
 .container-rules{
     width: 80%;
-    height: 100%;
+    height: auto;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Langar', cursive;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-3%);
+    background-color: black;  
+    color: white;
 }
 .container-rules h1{
     font-size: 2.5rem;
-    margin-top: 10%;
     letter-spacing: 1rem;
 }
 
@@ -30,6 +31,7 @@ body, html{
     padding: 2%;
     margin: 0 auto;
     margin-top: 5%;
+    list-style-type: disc;
 }
 
 #rules li{
@@ -38,4 +40,30 @@ body, html{
     text-align: left;
     letter-spacing: .2rem;
 }
+#container-rules-id{
 
+    display: none;
+    
+}
+#container-rules-id.clicked{
+    display: flex;
+}
+
+#botaorules{
+    background-color: transparent;
+    border: none;
+    align-self: flex-end;
+}
+#imgBtn{
+    width: 50px;
+    cursor: pointer;
+}
+#imgBtn img{
+    width: 90%;
+    height: 50%;
+}
+
+#callRegras{
+    width: 100px;
+    height: 40px;
+}
