--- a/styles/landing-page.css
+++ b/styles/landing-page.css
@@ -12,20 +12,22 @@ body,html{
 .hello-world {
     clear: both;
     width: 100%;
-    height: 40vh;
+    height: auto;
+    margin-top: 15vh;
+    margin-bottom: 10vh;
     background-color: #7040ff;
     border-bottom: 2px solid rgb(165, 165, 165);
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: start;
     align-items: center;
 	text-align: center;
-	
+	padding: 5% 0;
     
 }
 
 .hello-world h1 {
     font-size: 3rem;
-    margin-top: 7%;
     font-family: 'system-ui', 'Times New Roman', Times, serif;
     color: white;
 
@@ -37,7 +39,9 @@ body,html{
     padding: 10vh 0 10vh 0;
     display: grid;
     grid-template-areas: "project1 project2"
-                         "project3 project4"
+                         "project3 project4";
+    background-color: #7040ff;
+
 }
 
 .projects-item {
@@ -196,14 +200,16 @@ body,html{
 	clear: both;
 	width: 100%;
 	height: auto;
-	color: white;
+    color: white;
 }
 
 
 .realfooter h1{
 	font-size: 1.5rem;
-	margin: 0 auto;
-	padding-bottom: 1%;
+    margin: 2% auto;
+    display: inline-block;
+    padding-bottom: 2%;
+    transform: translate(43vw,0);
 }
 .contacts{
 	width: 90%;
@@ -216,7 +222,7 @@ body,html{
 	color: white;
 	min-width: 150px;
 	width: 20%;
-	margin: .5%;
+	margin: 2%;
 	padding-left: 2rem;
 	line-height: 1rem;
 	float: left;
@@ -232,7 +238,7 @@ body,html{
 	color: white;
 	letter-spacing: 5px;
 	font-weight: bold;
-	margin-top: 5%;
+	margin-top: 20%;
 }
 
 @media (min-height: 900px){
