--- a/projects/project01_ligue-4/css/regras.css
+++ b/projects/project01_ligue-4/css/regras.css
@@ -1,12 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-body, html{
-    width: 100%;
-    height: 100%;
-    font-size: 16px;  
-}
 .container-rules{
     width: 80%;
     height: auto;
@@ -17,15 +8,16 @@ body, html{
     font-family: 'Langar', cursive;
     position: absolute;
     left: 50%;
+    top: 5%;
     transform: translate(-50%,-3%);
     background-color: black;  
     color: white;
 }
+
 .container-rules h1{
     font-size: 2.5rem;
     letter-spacing: 1rem;
 }
-
 
 #rules{
     padding: 2%;
@@ -40,11 +32,11 @@ body, html{
     text-align: left;
     letter-spacing: .2rem;
 }
-#container-rules-id{
 
-    display: none;
-    
+#container-rules-id{
+    display: none;    
 }
+
 #container-rules-id.clicked{
     display: flex;
 }
@@ -54,10 +46,12 @@ body, html{
     border: none;
     align-self: flex-end;
 }
+
 #imgBtn{
     width: 50px;
     cursor: pointer;
 }
+
 #imgBtn img{
     width: 90%;
     height: 50%;
