--- a/styles/landing-page.css
+++ b/styles/landing-page.css
@@ -1,320 +1,298 @@
 /* Section 1 - Hello World */
 .hello-world {
-    clear: both;
-    width: 100%;
-    height: auto;
-    margin-top: 15vh;
-    background-color: #7040ff;
-    border-bottom: 2px solid rgb(165, 165, 165);
-	text-align: center;
-	padding: 5% 0;
-    
+  width: 100%;
+  height: 30vh;
+  background-color: rgb(36, 36, 36);
+  margin-top: 15vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .hello-world h1 {
-    font-size: 3rem;
-    font-family: 'system-ui', 'Times New Roman', Times, serif;
-    color: white;
-
+  font-size: 3rem;
+  font-family: "system-ui", "Times New Roman", Times, serif;
+  color: white;
 }
 
 /* Section 2 - Projects */
 .projects {
-    width: 100vw;
-    padding: 10vh 0 10vh 0;
-    display: grid;
-    grid-template-areas: "project1 project2"
-                         "project3 project4";
-    background-color: #7040ff;
+  width: 100vw;
+  padding: 10vh 0;
+  background: linear-gradient(rgb(36, 36, 36) 0%, rgb(101, 38, 250) 100%); 
 
+  display: grid;
+  grid-template-areas:
+    "project1 project2"
+    "project3 project4";
 }
 
 .projects-item {
-    height: 30vh;
-    width: 30vw;
-    background-color: #fff;
+  height: 30vh;
+  width: 30vw;
+  background-color: #fff;
 
-    justify-self: center;
-    margin: 1vh 0 1vh 0;    
+  justify-self: center;
+  margin: 1vh 0 1vh 0;
 
-    border-radius: 20px;
-    border: 2px solid #86f;
+  border-radius: 20px;
+  border: 2px solid #86f;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    font-size: 1.5rem;
-    color: #7040ff;
-    text-decoration: none;
+  font-size: 1.5rem;
+  color: rgb(117, 80, 253);
+  text-decoration: none;
 }
 
 .projects-item:hover {
-    background-color: #86f;
-    color: #fff;
-    border-color: #000;
+  background-color: rgb(117, 80, 253);
+  color: #fff;
+  border-color: #000;
 }
 
 /* Section 3 - Technologies */
 
 .technologies {
-    min-height: 45vh;
-    height: auto;
-    background-color: #7040ff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 5%;
+  min-height: 45vh;
+  height: auto;
+  background: linear-gradient(rgb(101, 38, 250) 0%, rgb(95, 41, 255) 100%); 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5%;
 }
 
-.technologies h1{
-    color: #fff;
-    font-size: 2rem;
-    margin-bottom: 20px;
+.technologies h1 {
+  color: #fff;
+  font-size: 2rem;
+  margin-bottom: 20px;
 }
 
 .technologies-box {
-    width: 60%;
-    height: auto;
-    padding: 5%;
-    background-color: rgb(255, 255, 255);
-    border-radius: 20px;
-    display: flex;  
-    justify-content: center;
-    align-items: center;
-    grid-template-areas:"html css js";
-    flex-wrap: wrap;
-    
+  width: 60%;
+  height: auto;
+  padding: 5%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-template-areas: "html css js";
+  flex-wrap: wrap;
 }
 
 .technologies-box-item {
-    list-style: none;
-    width: 20%;
-    min-width: 120px;
-    margin: 5%;
-    border-radius: 10px 0 10px 0;    
-    line-height: 4em;
-    float: left;
-    text-align: center;
-    color: #fff;
-    font-family: 'Share Tech Mono', monospace;
-    font-size: 1rem;
+  list-style: none;
+  width: 20%;
+  min-width: 120px;
+  margin: 5%;
+  border-radius: 10px 0 10px 0;
+  line-height: 4em;
+  float: left;
+  text-align: center;
+  color: #fff;
+  font-family: "Share Tech Mono", monospace;
+  font-size: 1rem;
 }
 
 #technologies-html {
-    color: #ff8800;
-    background-color: rgb(255, 215, 169);
-    letter-spacing: 2px;
-
+  color: #ff8800;
+  background-color: rgb(255, 215, 169);
+  letter-spacing: 2px;
 }
 
 #technologies-css {
-    color: #040477;
-    letter-spacing: 2px;
-    background-color: rgb(129, 129, 255);
+  color: #040477;
+  letter-spacing: 2px;
+  background-color: rgb(129, 129, 255);
 }
 
 #technologies-js {
-    color: rgb(122, 110, 1);
-    letter-spacing: 2px;
-    background-color: rgb(255, 247, 172);
+  color: rgb(122, 110, 1);
+  letter-spacing: 2px;
+  background-color: rgb(255, 247, 172);
 }
 
 /* Section 4 - Our Team */
 
-
 .about-us-container {
-    padding-top: 5%;
-    background-color: #8f6aff;
+  padding-top: 5%;
+  background: linear-gradient(rgb(95, 41, 255) 0%, rgb(158, 125, 255) 100%);
 
-    z-index: -1;
+  z-index: -1;
 }
 
-.about-us-container h1{
-    font-size: 3rem;
-    margin-top: 7%;
-    font-family: 'system-ui', 'Times New Roman', Times, serif;
-    color: white;
-    text-align: center;
-	margin: 5%;
-
+.about-us-container h1 {
+  font-size: 3rem;
+  margin-top: 7%;
+  font-family: "system-ui", "Times New Roman", Times, serif;
+  color: white;
+  text-align: center;
+  margin: 5%;
 }
 
 .about-us-container-profiles {
-    
-    padding: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #fff;
-    border-radius: 30px;
-    border: 2px solid #86f;
-    width: 30%;
-    height: 30%;
-    float: left;
-	margin: 5% 5% 5% 8%;
-    
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #fff;
+  border-radius: 30px;
+  border: 2px solid #86f;
+  width: 30%;
+  height: 30%;
+  float: left;
+  margin: 5% 5% 5% 8%;
 }
 
 .about-us-container-profiles img {
-    height: 80%;
-    width: 80%;
-    border-radius: 200px;
-    border: 5px solid #86f;
-    margin-bottom: 2vh;
-   
+  height: 80%;
+  width: 80%;
+  border-radius: 200px;
+  border: 5px solid #86f;
+  margin-bottom: 2vh;
 }
 
 .about-us-container-profiles text {
-    height: 20%;
-    font-size: 1.4rem;
-    color: #86f;
-    font-weight: bold;
-    padding: 5% 0 0 0;
+  height: 20%;
+  font-size: 1.4rem;
+  color: #86f;
+  font-weight: bold;
+  padding: 5% 0 0 0;
 }
 
-#section5{
-	width: 100vw;
-	height: auto;
-	clear: both;
-	padding: 2%;
-	padding-bottom: .5%;
-	margin: 0;
-	background-color : black;
+#section5 {
+  width: 100vw;
+  height: auto;
+  clear: both;
+  padding: 2%;
+  padding-bottom: 0.5%;
+  margin: 0;
+  background-color: black;
 }
 
-.realfooter{
-	clear: both;
-	width: 100%;
-	height: auto;
-    color: white;
+.realfooter {
+  clear: both;
+  width: 100%;
+  height: auto;
+  color: white;
 }
 
-
-.realfooter h1{
-	font-size: 1.5rem;
-    margin: 2% auto;
-    display: inline-block;
-    padding-bottom: 2%;
-    transform: translate(43vw,0);
+.realfooter h1 {
+  font-size: 1.5rem;
+  margin: 2% auto;
+  display: inline-block;
+  padding-bottom: 2%;
+  transform: translate(43vw, 0);
 }
 
-.contacts{
-	width: 90%;
-	height: 100px;
-	
+.contacts {
+  width: 90%;
+  height: 100px;
 }
 
-.contato{
-	
-	font-size:.7rem;
-	color: white;
-	min-width: 150px;
-	width: 20%;
-	margin: 2%;
-	padding-left: 2rem;
-	line-height: 1rem;
-	float: left;
-	font-family: monospace, 'Times New Roman', Times, serif;
-	
+.contato {
+  font-size: 0.7rem;
+  color: white;
+  min-width: 150px;
+  width: 20%;
+  margin: 2%;
+  padding-left: 2rem;
+  line-height: 1rem;
+  float: left;
+  font-family: monospace, "Times New Roman", Times, serif;
 }
 
-.made{
-	text-align: center;
-	clear: both;
-	width: 50%;
-	margin: 2% auto;
-	font-size: .7rem;
-	color: white;
-	letter-spacing: 5px;
-	font-weight: bold;
-	margin-top: 20%;
+.made {
+  text-align: center;
+  clear: both;
+  width: 50%;
+  margin: 2% auto;
+  font-size: 0.7rem;
+  color: white;
+  letter-spacing: 5px;
+  font-weight: bold;
+  margin-top: 20%;
 }
 
-@media (min-height: 900px){
+@media (min-height: 900px) {
+  header nav ul li a {
+    font-size: 1.5rem;
+  }
 
-    header nav ul li a{
-
-      
-        font-size: 1.5rem;
-    }
-
-    body,html{
-        font-size: 18px;
-    }
-       
+  body,
+  html {
+    font-size: 18px;
+  }
 }
 
-@media (max-width: 1250px) and (min-height: 900px){   
-	#navbar{
-    	display: none;
-    }
-    #hamburger{
-    	display: block;
-    }
-    .stickers{
-        top: -12px;
-    }
+@media (max-width: 1250px) and (min-height: 900px) {
+  #navbar {
+    display: none;
+  }
+
+  #hamburger {
+    display: block;
+  }
+
+  .stickers {
+    top: -12px;
+  }
 }
 
-
-@media (max-width: 900px) and (max-height: 700px){
-    
-    #navbar{
-        display: none;
-    }
-    #hamburger{
-        display: block;
-    }
+@media (max-width: 900px) and (max-height: 700px) {
+  #navbar {
+    display: none;
+  }
+  #hamburger {
+    display: block;
+  }
 }
 
-@media (max-width: 800px) and (max-height: 1100px){  
-     
-	.about-us-container-profiles {
-        width: 80%;
-    }
-    
+@media (max-width: 800px) and (max-height: 1100px) {
+  .about-us-container-profiles {
+    width: 80%;
+  }
 }
 
-@media (max-width: 1100px){
-		
-    .about-us-container-profiles {
-		float: left;
-		width: 80%;
-		margin-left: 5%;
-    }
+@media (max-width: 1100px) {
+  .about-us-container-profiles {
+    float: left;
+    width: 80%;
+    margin-left: 5%;
+  }
 
-    #navbar{
-        display: none;
-    }
+  #navbar {
+    display: none;
+  }
 
-    #hamburger{
-        display: block;
-    }
-
+  #hamburger {
+    display: block;
+  }
 }
 
-@media (max-width: 500px){
-    body,html{
-        font-size: 14px;
-    }
-
+@media (max-width: 500px) {
+  body,
+  html {
+    font-size: 14px;
+  }
 }
 
-@media (max-width: 420px){
+@media (max-width: 420px) {
+  body,
+  html {
+    font-size: 12px;
+  }
 
-    body,html{
-        font-size: 12px;
-	}
-	
-	.about-us-container-profiles {
-
-        width: 70%;
-		margin: 5% auto;
-		margin-left: 7%;
-
-    }
-    
+  .about-us-container-profiles {
+    width: 70%;
+    margin: 5% auto;
+    margin-left: 7%;
+  }
 }
