--- a/styles/main.css
+++ b/styles/main.css
@@ -10,11 +10,17 @@ html {
     overflow-x: hidden;
     height: 100%;
     width: 100%;
-    background-color: #eee;    
+    background-color: #eee;
 }
 
 #header-logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#header-logo img {
     height: clamp(50px, 10vh, 80%);
     max-height: 130px;
     width: auto;
-}   
+}
