--- a/projects/project01_ligue-4/css/game.css
+++ b/projects/project01_ligue-4/css/game.css
@@ -1,36 +1,28 @@
-body{
-    background-color: brown;
-}
 #ul{
-    position: relative;
-    width: 100%;
-    padding: 0px;
+    display: flex;
+    width: 890px;
+    height: 660px;
     text-align: center;
     list-style-type: none;
     
 }
 .lis{
     position: relative;
-    top: 200px;
-    height: 350px;
-    width: 13%;
-    padding: 0px;
+    height: 100%;
+    width: 14.3%;
     display: inline-block;
-    background-color: burlywood;
 }
 .ball{
     position: absolute;
-    top:0px;
-    left: 15px;
-    width: 50px;
-    height: 50px;
+    width: 84px;
+    height: 84px;
     background-color: darkblue;
+    border: 5px solid #000;
     border-radius: 360px;
 }
-
 #pipe{
     position: absolute;
-    top: -10px;
+    top: -30px;
     left: 0px;
     height: 50px;
     width: 50px;
