--- a/projects/project01_ligue-4/css/animations.css
+++ b/projects/project01_ligue-4/css/animations.css
@@ -1,16 +1,18 @@
 /*Blink animation*/
 .blink {
-    animation: blink-animation 0.4s steps(5, start) infinite;
-    -webkit-animation: blink-animation 0.4s steps(5, start) infinite;
-    color:yellow
+  animation: blink-animation 0.4s steps(5, start) infinite;
+  -webkit-animation: blink-animation 0.4s steps(5, start) infinite;
+  color: yellow;
+}
+
+@keyframes blink-animation {
+  to {
+    color: blue;
   }
-  @keyframes blink-animation {
-    to {
-      color: blue;
-    }
+}
+
+@-webkit-keyframes blink-animation {
+  to {
+    color: blue;
   }
-  @-webkit-keyframes blink-animation {
-    to {
-        color: blue;
-    }
-  }
+}
